added cors, swagger
